Fixed section -> padding-top on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ section {
     }
     section {
         /* hauteur de la navbar */
-        padding-top: 70px;
+        padding-top: 60px;
     }
     .subtitle {
         padding: 0;
